[project]
name = "eventpulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.13.0",
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.128.0",
    "playwright>=1.57.0",
    "python-dotenv>=1.2.1",
    "tiktokapi>=7.2.1",
]
